Bug 133548 - Custom format for heading not shown in Navigator
Summary: Custom format for heading not shown in Navigator
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.3.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2020-05-31 10:15 UTC by SiL3NC3
Modified: 2021-05-07 04:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SiL3NC3 2020-05-31 10:15:43 UTC
Description:
After creating a custom heading it is not shown in Navigator.

Steps to Reproduce:
1. Create a new formatting below "Heading 1"
2. Assign it to a text heading
3. Check the Navigator

Actual Results:
Navigator is still empty.

Expected Results:
Navigator should have an entry with the created custom formatted heading.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 6.4.3.2 (x86)
Build-ID: 747b5d0ebf89f41c860ec2a39efd7cb15b54f2d8
CPU-Threads: 4; BS: Windows 6.3 Build 9600; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: CL
Comment 1 BogdanB 2020-05-31 20:13:34 UTC
Confirm it.

After creating a style from "heading 1" style, the new style at Outline and Numbering has the outline level is "text body", inspite of "Level 1" like in "Heading 1".


Confirm on
Version: 6.4.3.2
Build ID: libreoffice-6.4.3.2-snap1
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded

Version: 7.0.0.0.beta1+
Build ID: 2891e91a513520d68ea2b8c59c14335861a15253
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 Roman Kuznetsov 2020-09-12 19:22:18 UTC
Jim, you are the best specialist in Navigator, could you look at it?
Comment 3 Jim Raykowski 2020-09-16 07:51:25 UTC
Seems creating a new style from the Styles context menu item New... is not the same as creating a new style with 'New Style from Selection'. Would expect numbering and outline level to be inherited and not set to no numbering and 0 level (text body). On my  list of things to try to solve.
Comment 4 Jim Raykowski 2021-01-30 07:30:51 UTC
https://opengrok.libreoffice.org/xref/core/sw/source/uibase/app/docst.cxx?r=c971773a#773

/*When a new paragraph style is created based on a "to outline style
  assigned" paragraph style, the outline level attribute and the list
  style attribute of the new paragraph style have to be set to 0
  respectively "".*/

I don't know why this has to be done. 

When the chunk of code that does this is removed, the outline level and list style is used from the inherited style.
Comment 5 Jim Raykowski 2021-03-10 02:48:44 UTC
Purposed patch:
https://gerrit.libreoffice.org/c/core/+/112255

Code review is greatly appreciated.
Comment 6 Commit Notification 2021-04-29 23:42:42 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43c47f0cc133782ed6c4037df38df0d0c82123b8

tdf#133548 don't change outline level attrib and list style attrib

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2021-05-07 04:13:12 UTC
it's ok now.

Verified in Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 1a99b4e44190e182d56a04678850d62635d74c65
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded