tdf#133548 don't change outline level attrib and list style attrib

when a new paragraph style is created based on a "to outline style
assigned" paragraph style

Change-Id: Ia757ca375e0e8749a24c27ad8e3f40daff7ef55d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112255
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>